--- a/MyStyle.css
+++ b/MyStyle.css
@@ -45,18 +45,14 @@ input[type="text"]:focus,input[type="number"]:focus {
     background-color: rgb(207, 207, 207);
 }
 input[type="submit"]:hover{
-    transform: scale(3);
-
-
-    background: linear-gradient(90deg,violet,rgb(157, 21, 255),blue,rgb(11, 255, 11),rgb(232, 255, 101),orange,red);
+    transform: scale(1.5);
+    background: linear-gradient(30deg,violet,rgb(157, 21, 255),blue,rgb(11, 255, 11),rgb(232, 255, 101),orange,red);
 }
 input[type="reset"]:hover{
     transform: scale(1.3);
     background-color: red;
 }
-input[type="submit"] label{ 
-    color: aqua;
-}
+
 .button{
     color: aquamarine;
 }
@@ -69,9 +65,6 @@ textarea:focus{
     box-shadow: 0 0 10px rgba(0, 0, 255, 0.5);
     background-color: rgb(207, 207, 207);
 }
-input[type="reset"]{
-    background-color: red ;
-}
 label{
     display: inline-block;
     width: 120px;
@@ -83,6 +76,7 @@ form div{
     margin-top: 5px;
 }
 form{
+    height: 500px;
     padding: 40px;
     border: 5px solid rgb(0, 255, 68);
     background-color: rgb(255, 90, 178);
@@ -120,8 +114,15 @@ input[type = "checkbox"]{
     margin-top: 20px;
 }
 input[type="submit"]{
+    scale: 1.5;
     margin-top: 20px;
     margin-left: 150px;
+    border-radius: 10px;
+    background-color: chartreuse;
+}
+input[type="reset"]{
+    border-radius: 10px;
+    background-color: rgb(255, 24, 24) ;
 }
 .radio-group input{
     margin-left: 30px; 
@@ -134,7 +135,7 @@ input[type="submit"]{
     bottom: 40px;
 }
 .purple {
-    color: var(--BlueBright);
+    color: rgb(0, 255, 123);
 }
 .root{
     --BlueBright: rgb(1, 230, 255) ;
